--- a/styles/global.css
+++ b/styles/global.css
@@ -9,5 +9,56 @@ html {
     --icons-details: #A5B0C1;
 
     --grey-dark: #4D5E77;
-    --grey-blue?: 
+    --grey-blue: #A1B2CD;
+    --grey-medium: #D3D9E2;
+    --grey-light: #E5EAF1;
+
+    /* 1rem = 16px (User Agent) = 100% (User Agent) */
+    font-size: 62.5%;
+}
+
+body {
+    height: 100vh;
+    background: var(--background);
+}
+
+body, button, textarea {
+    /* intervalo de tamanho */
+    font-size: clamp(14px, 1.6rem, 2vw);
+    font-family: 'Open Sans', sans-serif;
+    /* font-family: 'Poppins', sans-serif; */
+}
+
+.content {
+    width: 100%;
+    margin: 0 auto;
+}
+
+.sr-only {
+    display: none;
+    position: absolute;
+    height: 1px;
+    width: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip-path: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
+}
+
+/* Input, Buttom */
+input, button .button {
+    border-radius: .8rem;
+    height: 5rem;
+}
+
+button, .button {
+    font-family: 'Popins';
+    font-weight: 500;
+    line-height: 0;
+
+    display: flex;
+    align-items: center;
+
 }
