--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,11 @@
+* {
+    margin: 0;
+    padding: 0;
+    border: none;
+    text-decoration: none;
+    box-sizing: border-box;
+}
+
 html {
     --black: #0D114F;
     --white: #FAFAFA;
@@ -22,9 +30,10 @@ body {
     background: var(--background);
 }
 
-body, button, textarea {
+body, button, input, textarea {
     /* intervalo de tamanho */
     font-size: clamp(14px, 1.6rem, 2vw);
+
     font-family: 'Open Sans', sans-serif;
     /* font-family: 'Poppins', sans-serif; */
 }
@@ -48,7 +57,8 @@ body, button, textarea {
 }
 
 /* Input, Buttom */
-input, button .button {
+input, button, .button {
+
     border-radius: .8rem;
     height: 5rem;
 }
@@ -60,5 +70,40 @@ button, .button {
 
     display: flex;
     align-items: center;
+    justify-content: center;
+    
+    background: var(--blue);
+    color: var(--white);
+
+    transition: filter .2s;
+
+    cursor: pointer;
+}
+
+button:hover, .button:hover {
+    filter: brightness(1.2);
+}
+
+button > img
+.button > img {
+    margin-right: 1rem;
+    width: 2rem;
+
+}
+
+button.outlined,
+.button.outlined {
+   background: var(--white); 
+   color: var(--blue);
+   border: .2rem solid var(--blue); 
+}
+
+.content header {
+    width: 80%;
+    margin: 3.5rem auto;
+}
+
+.content header img {
+    width: 16.7rem;
 
 }
