--- a/styles/home.css
+++ b/styles/home.css
@@ -19,6 +19,7 @@ header {
 
 main {
     grid-area: right;
+
     display: flex;
     align-items: center;
 }
@@ -38,4 +39,9 @@ main h2 {
 input {
     border: .2rem solid var(--grey-blue);
     padding: 0 1.6rem;
+}
+
+input, button, .button {
+    width: 100%;
+    margin-bottom: 1.8rem;
 }
