--- a/styles/room.css
+++ b/styles/room.css
@@ -1,5 +1,5 @@
 .content {
-    max-width: 90%;
+    max-width: min(112rem, 90%);
 
 }
 
@@ -50,6 +50,59 @@
     font-size: 2.8rem;
     color: var(--black);
     font-weight: 700;
-    margin-bottom: 2.4rem;
     line-height: 2.2rem;
+
+    margin-bottom: 2.4rem;
+}
+
+#question-form form {
+    border: .2rem solid var(--grey-blue);
+    padding: 1.6rem;
+    border-radius: 0 .8rem .8rem .8rem;
+
+    margin-bottom: 1.6rem;
+
+}
+
+#question-form textarea {
+    width: 100%;
+    resize: none;
+    background: none;
+
+    outline: none;
+}
+
+#question-form form textarea::placeholder {
+    color: var(--grey-blue);
+
+}
+
+#question-form form footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+}
+
+
+#question-form form footer > div {
+    display: flex;
+    align-items: center;
+
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    font-size: 1.4rem;
+    color: var(--icons-details)
+
+}
+
+
+#question-form form footer > div img {
+    margin-right: 0.9rem;
+}
+
+#question-form form footer button{
+    height: auto;
+    padding: .8rem 2.4rem;
+    line-height: 2.4rem;
 }
