--- a/styles/global.css
+++ b/styles/global.css
@@ -18,7 +18,7 @@ html {
 
     --grey-dark: #4D5E77;
     --grey-blue: #A1B2CD;
-    --grey-medium: #D3D9E2;
+    --grey-medium: #eaecf1;
     --grey-light: #E5EAF1;
 
     /* 1rem = 16px (User Agent) = 100% (User Agent) */
@@ -85,7 +85,7 @@ button:hover, .button:hover {
     filter: brightness(1.2);
 }
 
-button > img
+button > img,
 .button > img {
     margin-right: 1rem;
     width: 2rem;
