--- a/styles/global.css
+++ b/styles/global.css
@@ -100,6 +100,20 @@ button.outlined {
 }
 
 
+button.red,
+.button.red {
+    background: var(--red);
+    color: var(--white);
+
+}
+
+button.grey,
+.button.grey {
+    background: var(--grey-light);
+    color: var(--grey-dark);
+
+}
+
 /* Header */
 .content header {
     width: 80%;
