--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -37,6 +37,7 @@
                 </a>
             </div>
         </header>
+
         <main>
             <section id="question-form">
                 <h2>Faça sua pergunta</h2>
@@ -114,7 +115,7 @@
                     <h2>Excluir pergunta</h2>
                     <p>Tem certeza que você deseja excluir esta pergunta?</p>
                     
-                    <form action="" method="POST">
+                    <form action="#" method="POST">
                         <label class="sr-only" for-id="password">Digite sua senha de administrador.</label>
                         <input type="password" name="password" placeholder="Digite sua Senha">
                         
