--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -68,11 +68,11 @@
                                 </div>
                             </div>
                             <div class="actions">
-                                <a href="#" class="check" data-id="<%= question.id %>">
+                                <a href="" class="check" data-id="<%= question.id %>">
                                     <img src="/images/check.svg" alt="Marcar como lida">
                                     Marcar como lida
                                 </a>
-                                <a href="#" class="delete" data-id="<%= question.id %>">
+                                <a href="" class="delete" data-id="<%= question.id %>">
                                     <img src="/images/trash.svg" alt="Excluir">
                                     Excluir
                                 </a>
@@ -92,7 +92,7 @@
                                     </div>
                                 </div>
                                 <div class="actions" data-id="<%= questionRead.id %>">
-                                    <a href="#" class="delete">
+                                    <a href="" class="delete">
                                         <img src="/images/trash.svg" alt="Excluir">
                                         Excluir
                                     </a>
