--- a/public/styles/room.css
+++ b/public/styles/room.css
@@ -170,3 +170,35 @@
     background: var(--grey-blue);
 
 }
+
+/* No Questions */
+
+.noquestions {
+    text-align: center;
+    margin-top: 5.2rem;
+}
+
+.noquestions {
+    text-align: center;
+    margin-top: 5.2rem;
+}
+
+.noquestions img {
+    max-width: 100%;
+    margin-bottom: 1.2rem;
+}
+
+.noquestions p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.8rem;
+    font-weight: 600;
+}
+
+.noquestions p + p {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.4rem;
+    font-weight: 400;
+    line-height: 1.9rem;
+    margin-top: 1.3rem;
+
+}
