--- a/src/views/parts/enter-room.ejs
+++ b/src/views/parts/enter-room.ejs
@@ -1,8 +1,8 @@
 <section>
     <h2>Entrar como participante</h2>
-    <form action="">
+    <form action="/enterrom" method="POST">
         <label class="sr-only" for="room-id">Codigo da Sala</label>
-        <input type="number" id="room-id" placeholder="Código da Sala">
+        <input name="roomId" type="number" id="room-id" placeholder="Código da Sala">
         <button>
             <img src="images/enter-room.svg" alt="Entrar Na Sala">
             Entrar na Sala
