--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -31,7 +31,7 @@
                     #<%= roomId %>
                     <img src="/images/copy1.svg" alt="Copiar número da Sala" />
                 </div>
-                <a href="#" class="button">
+                <a href="/create-pass" class="button">
                     <img src="/images/users-white.svg" alt="Criar uma Sala"/>
                     Criar Sala
                 </a>
@@ -56,6 +56,10 @@
             <section id="questions">
                 <h2 class="sr-only">Perguntas da Comunidade</h2>
                 <div class="questions">
+                
+                    <% if ( isNoQuestions ) { %>
+                        <%- include('parts/noquestion') %>
+                    <% } %>
                     
                     <% questions.forEach(question => { %>
                         <div class="question-wrapper">
@@ -68,11 +72,11 @@
                                 </div>
                             </div>
                             <div class="actions">
-                                <a href="" class="check" data-id="<%= question.id %>">
+                                <a href="#" class="check" data-id="<%= question.id %>">
                                     <img src="/images/check.svg" alt="Marcar como lida">
                                     Marcar como lida
                                 </a>
-                                <a href="" class="delete" data-id="<%= question.id %>">
+                                <a href="#" class="delete" data-id="<%= question.id %>">
                                     <img src="/images/trash.svg" alt="Excluir">
                                     Excluir
                                 </a>
@@ -81,18 +85,18 @@
                         </div>
                         <% }); %>
                         
-                        <% questionsRead.forEach(questionsRead=> { %>
+                        <% questionsRead.forEach(questionRead=> { %>
                             <div class="question-wrapper read">
                                 <div class="question-content">
                                     <div class="user">
                                         <img src="/images/user.svg" alt="">
                                     </div>
                                     <div class="question">
-                                        <p><%= questionsRead.title %></p>
+                                        <p><%= questionRead.title %></p>
                                     </div>
                                 </div>
                                 <div class="actions" data-id="<%= questionRead.id %>">
-                                    <a href="" class="delete">
+                                    <a href="#" class="delete">
                                         <img src="/images/trash.svg" alt="Excluir">
                                         Excluir
                                     </a>
